--- a/app/test.ipynb
+++ b/app/test.ipynb
@@ -991,40 +991,234 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "            <style>\n",
+       "                .geemap-dark {\n",
+       "                    --jp-widgets-color: white;\n",
+       "                    --jp-widgets-label-color: white;\n",
+       "                    --jp-ui-font-color1: white;\n",
+       "                    --jp-layout-color2: #454545;\n",
+       "                    background-color: #383838;\n",
+       "                }\n",
+       "\n",
+       "                .geemap-dark .jupyter-button {\n",
+       "                    --jp-layout-color3: #383838;\n",
+       "                }\n",
+       "\n",
+       "                .geemap-colab {\n",
+       "                    background-color: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "\n",
+       "                .geemap-colab .jupyter-button {\n",
+       "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "            </style>\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "03022387688a41a58c26fdf7c89d6742",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map(center=[16.273925264205538, 14.218826051790028], controls=(WidgetControl(options=['position', 'transparent…"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import requests\n",
+    "# Python\n",
+    "import ee\n",
     "\n",
+    "# Third party\n",
     "import os\n",
-    "path_private_key = os.getenv(\"YOUR_ACCESS_TOKEN\")\n",
-    "service_account = os.getenv(\"SERVICE_ACCOUNT\")\n",
+    "import geemap\n",
     "\n",
-    "def get_address(lat, lon, api_key):\n",
-    "    \"\"\"Fetch address from Google Maps Geocoding API.\"\"\"\n",
-    "    base_url = \"https://maps.googleapis.com/maps/api/geocode/json\"\n",
-    "    params = {\n",
-    "        \"latlng\": f\"{lat},{lon}\",\n",
-    "        \"key\": api_key\n",
-    "    }\n",
-    "    response = requests.get(base_url, params=params)\n",
-    "    if response.status_code == 200:\n",
-    "        json_result = response.json()\n",
-    "        if json_result[\"results\"]:\n",
-    "            address = json_result[\"results\"][0][\"formatted_address\"]\n",
-    "            return address\n",
-    "        else:\n",
-    "            return \"No address found.\"\n",
-    "    else:\n",
-    "        return \"Error in Geocoding API call.\"\n",
+    "def get_environment_variables():\n",
+    "    \"\"\"\n",
+    "    Retrieves environment variables for authentication.\n",
     "\n",
-    "# Usage\n",
-    "api_key = 'YOUR_API_KEY_HERE'\n",
-    "latitude = 34.052235\n",
-    "longitude = -118.243683\n",
-    "address = get_address(latitude, longitude, api_key)\n",
-    "print(address)\n"
+    "    Returns:\n",
+    "        Tuple containing service account email and path to the private key.\n",
+    "\n",
+    "    Raises:\n",
+    "        ValueError: If the environment variables are not set.\n",
+    "    \"\"\"\n",
+    "    path_private_key = os.getenv(\"YOUR_ACCESS_TOKEN\")\n",
+    "    service_account = os.getenv(\"SERVICE_ACCOUNT\")\n",
+    "\n",
+    "    if path_private_key is None or service_account is None:\n",
+    "        raise ValueError(\n",
+    "            f\"Environment variables for the service account or access token are not set.\\n\"\n",
+    "            f\"YOUR_ACCESS_TOKEN: {path_private_key}\\nSERVICE_ACCOUNT: {service_account}\"\n",
+    "        )\n",
+    "\n",
+    "    return service_account, path_private_key\n",
+    "\n",
+    "\n",
+    "def initialize_earth_engine(service_account, private_key):\n",
+    "    \"\"\"\n",
+    "    Initializes Google Earth Engine with specified credentials.\n",
+    "\n",
+    "    Args:\n",
+    "        service_account: Google service account email.\n",
+    "        private_key: Path to the Google service account private key file.\n",
+    "\n",
+    "    Raises:\n",
+    "        RuntimeError: If initialization fails.\n",
+    "    \"\"\"\n",
+    "    credentials = ee.ServiceAccountCredentials(service_account, private_key)\n",
+    "    ee.Initialize(credentials)\n",
+    "\n",
+    "\n",
+    "def establish_connection():\n",
+    "    \"\"\"Initializes Google Earth Engine with service account credentials.\"\"\"\n",
+    "\n",
+    "    try:\n",
+    "        service_account, private_key = get_environment_variables()\n",
+    "        initialize_earth_engine(service_account, private_key)\n",
+    "        return True\n",
+    "\n",
+    "    except ee.EEException as e:\n",
+    "        raise RuntimeError(\n",
+    "            f\"Connection validation failed with Earth Engine API error: {e}\"\n",
+    "        )\n",
+    "    except Exception as e:\n",
+    "        raise RuntimeError(\n",
+    "            f\"Connection validation failed with an unexpected error: {e}\"\n",
+    "        )\n",
+    "\n",
+    "establish_connection()\n",
+    "# Initialize the Earth Engine API\n",
+    "srtm = ee.Image(\"USGS/SRTMGL1_003\")\n",
+    "soilGrids = ee.Image('ISDASOIL/Africa/v1/carbon_total')\n",
+    "soc_0_20cm = soilGrids.select('mean_0_20')\n",
+    "worldCover = ee.Image('ESA/WorldCover/v100/2020')\n",
+    "chirps = ee.ImageCollection('UCSB-CHG/CHIRPS/DAILY')\n",
+    "moisture = ee.ImageCollection('NASA/SMAP/SPL4SMGP/007')\n",
+    "\n",
+    "# Define the Sahel region as a polygon\n",
+    "sahelRegion = ee.Geometry.Polygon([\n",
+    "    [[-17.5, 15.0], [-17.5, 20.0], [39.0, 20.0], [43.0, 10.5], [35.0, 8.0],\n",
+    "     [25.0, 10.0], [15.0, 8.0], [-5.0, 12.0], [-10.0, 13.0]]\n",
+    "])\n",
+    "\n",
+    "elevationVis = {\n",
+    "    'min': 0,\n",
+    "    'max': 3000,\n",
+    "    'palette': ['0000FF', '00FFFF', '00FF00', 'FFFF00', 'FF0000']\n",
+    "}\n",
+    "\n",
+    "slopeVis = {\n",
+    "    'min': 0,\n",
+    "    'max': 60,\n",
+    "    'palette': ['00FFFF', '0000FF', '00FF00', 'FFFF00', 'FF0000']\n",
+    "}\n",
+    "\n",
+    "socVis = {\n",
+    "    'min': 0,\n",
+    "    'max': 200,\n",
+    "    'palette': ['FFFFFF', 'C0C0C0', '808080', '404040', '000000', '00FF00', '008000', 'FFFF00', 'FFA500', 'FF0000']\n",
+    "}\n",
+    "\n",
+    "precipVis = {\n",
+    "    'min': 0,\n",
+    "    'max': 3000,\n",
+    "    'palette': ['FFFFFF', 'C0C0C0', '808080', '404040', '000000', '0000FF', '00FFFF', '00FF00', 'FFFF00', 'FF0000']\n",
+    "}\n",
+    "\n",
+    "moistVis = {\n",
+    "    'min': 0.0,\n",
+    "    'max': 0.5,\n",
+    "    'palette': ['red', 'yellow', 'green', 'blue']\n",
+    "}\n",
+    "\n",
+    "regionsVis = {\n",
+    "    'bands': ['Map'],\n",
+    "    'min': 10,\n",
+    "    'max': 100,\n",
+    "    'palette': [\n",
+    "        '006400', 'FFBB22', 'FFFF4C', 'F096FF', 'FA0000', 'B4B4B4', 'F0F0F0', '0064C8', '0096A0', '00CF75', 'FAE6A0'\n",
+    "    ]\n",
+    "}\n",
+    "\n",
+    "candidateVis = {\n",
+    "    'min': 0,\n",
+    "    'max': 1,\n",
+    "    'palette': ['red', 'green']\n",
+    "}\n",
+    "\n",
+    "# Filter datasets to only include the Sahel region\n",
+    "srtmSahel = srtm.clip(sahelRegion)\n",
+    "soilGridsSahel = soilGrids.clip(sahelRegion)\n",
+    "worldCoverSahel = worldCover.clip(sahelRegion)\n",
+    "soc_0_20cm = soc_0_20cm.clip(sahelRegion)\n",
+    "\n",
+    "# Define the time range for one year (e.g., 2023)\n",
+    "startDate = '2023-01-01'\n",
+    "endDate = '2023-12-31'\n",
+    "\n",
+    "# Filter the CHIRPS data to the specified date range and region\n",
+    "chirpsYear = chirps.filterDate(startDate, endDate).map(lambda image: image.clip(sahelRegion))\n",
+    "\n",
+    "# Sum the daily precipitation to get the annual precipitation\n",
+    "annualPrecipitation = chirpsYear.sum()\n",
+    "\n",
+    "# Calculate the slope in degrees\n",
+    "slope = ee.Terrain.slope(srtmSahel)\n",
+    "\n",
+    "# Define a time period of interest for moisture (modify dates as needed)\n",
+    "filteredMoistureDataset = moisture.filterDate('2020-01-01', '2020-01-10').map(lambda image: image.clip(sahelRegion))\n",
+    "\n",
+    "# Select the 'sm_surface' and 'sm_rootzone' bands\n",
+    "soilMoistureSurface = filteredMoistureDataset.select('sm_surface')\n",
+    "soilMoistureRootZone = filteredMoistureDataset.select('sm_rootzone')\n",
+    "\n",
+    "# Identify regions with minimal slope\n",
+    "suitableSlope = slope.lt(15)\n",
+    "\n",
+    "# Identify regions with minimal soil organic carbon or sufficient moisture\n",
+    "suitableSOC = soc_0_20cm.gt(20)  # Example: suitable SOC greater than 20 g/kg\n",
+    "suitableMoisture = soilMoistureSurface.mean().gte(0.1)  # Suitable soil moisture greater than or equal to 10% VWC\n",
+    "goodMoisture = suitableSOC.Or(suitableMoisture)\n",
+    "\n",
+    "# Combine criteria to identify candidate regions\n",
+    "candidateRegions = annualPrecipitation.gte(200).And(suitableSlope).And(goodMoisture)\n",
+    "\n",
+    "# Mask out areas that are not Grass or Shrubland or Barenland\n",
+    "grassland = worldCoverSahel.eq(30)  # Grassland class in ESA WorldCover\n",
+    "barenland = worldCoverSahel.eq(60)  # Barenland class in ESA WorldCover\n",
+    "vegetationMask = grassland.Or(barenland)\n",
+    "\n",
+    "# Apply the mask to the candidate regions\n",
+    "afforestationCandidates = candidateRegions.And(vegetationMask)\n",
+    "\n",
+    "# Add layers to the map centered on the Sahel region\n",
+    "Map = geemap.Map(center=[15, 15], zoom=5)\n",
+    "Map.centerObject(sahelRegion, 5)\n",
+    "Map.addLayer(worldCoverSahel, regionsVis, 'ESA WorldCover 2020')\n",
+    "Map.addLayer(afforestationCandidates, candidateVis, 'Candidate Regions for Afforestation')\n",
+    "\n",
+    "# Display the map\n",
+    "Map"
    ]
   }
  ],
